Complete Problem Set 01: Text as Data Analysis
- Added sentiment analysis with dictionary approach (Q5)
- Implemented document similarity analysis (Q6.1)
- Completed qualitative document analysis (Q6.2)
- Created standalone R scripts for heavy computations
- Generated analysis results and visualizations
- Updated .gitignore to exclude large datasets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-*.csv
+# Large datasets
+midterm_candidates_labeled_all_May05.csv
+
+# Quarto cache and output
+problem_set_01_cache/
+problem_set_01_files/
+_freeze/
+/.quarto/
+**/*.quarto_ipynb
+
+# System files
+.DS_Store
+
+# R data files
 *.rdata
 *.rds
+
+# Keep analysis result CSVs (q5_*.csv, q6_*.csv)
+!q5_*.csv
+!q6_*.csv
